overlap fixed

--- a/main.css
+++ b/main.css
@@ -139,14 +139,17 @@ html, body {
 
 /* ----------------------------------- Remaining space ----------------------------------- */
 .remaining-space {
-    display: flex;
-    position: relative;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px;
     flex: 1;
     background-color: rgb(53, 49, 49);
+    display: flex;
+    align-items: center;
+    padding: 10px;
     overflow-x: auto;
+    justify-content: space-between;
+}
+
+.text-one {
+    margin-left: 5em;
 }
 
 .main-text {
@@ -154,6 +157,15 @@ html, body {
     color: white;
     font-size: 4em;
     font-weight: bold;
+    min-width: 200px;
+    min-height: 100px;
+    display: inline-block;
+}
+
+.name-2,
+.logo-2 {
+    display: inline-block;
+    white-space: nowrap;
 }
 
 .main-text .big-P-1 {
@@ -173,8 +185,14 @@ html, body {
 }
 
 .uj-logo {
-    position: fixed;
+    width: 30rem;
+    height: auto;
+    visibility: visible;
     right: 0;
-    max-width: 600px;
-    object-fit: contain;
+}
+
+@media (min-width: 800px) {
+    .uj-logo {
+        visibility: visible;
+    }
 }
